added Room and ViewModal - setup the shdare action in the detailFragment with the trailer link Finished Stage 2.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -28,7 +28,8 @@
             android:name=".FavouriteActivity"
             android:label="@string/title_activity_favourite"
             android:parentActivityName=".MainActivity" />
-        <activity android:name=".FavouriteMovieDetailActivity"></activity>
+        <activity android:name=".FavouriteMovieDetailActivity"
+            android:parentActivityName=".FavouriteActivity"></activity>
     </application>
 
 </manifest>
