--- a/app/build.gradle
+++ b/app/build.gradle
@@ -38,4 +38,11 @@ dependencies {
     implementation 'com.jakewharton:butterknife:8.8.1'
     annotationProcessor 'com.jakewharton:butterknife-compiler:8.8.1'
     implementation 'com.android.support:design:28.0.0-rc01'
+
+    def version = "1.1.1"
+    implementation "android.arch.persistence.room:runtime:$version"
+    annotationProcessor "android.arch.persistence.room:compiler:$version"
+    implementation "android.arch.lifecycle:extensions:$version"
+    annotationProcessor "android.arch.lifecycle:compiler:$version"
+
 }
