--- a/app/build.gradle
+++ b/app/build.gradle
@@ -45,4 +45,5 @@ dependencies {
     implementation "android.arch.lifecycle:extensions:$version"
     annotationProcessor "android.arch.lifecycle:compiler:$version"
 
+    implementation 'com.android.support:support-v4:28.0.0-rc01'
 }
