--- a/app/build.gradle
+++ b/app/build.gradle
@@ -13,6 +13,7 @@ android {
         // Please ensure you have a valid API KEY for themoviedb.org to use this app
         // A valid key will need to be entered
         buildConfigField("String", "API_KEY", API_KEY)
+        javaCompileOptions.annotationProcessorOptions.includeCompileClasspath = true
     }
     buildTypes {
         release {
@@ -24,7 +25,11 @@ android {
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
-    implementation 'com.android.support:appcompat-v7:28.0.0-rc01'
+    implementation 'com.android.support:appcompat-v7:28.0.0-alpha1'
+    implementation 'com.android.support:design:28.0.0-alpha1'
+    implementation 'com.android.support:exifinterface:28.0.0-alpha1'
+    implementation 'com.android.support:support-v4:28.0.0-alpha1'
+
     implementation 'com.android.support.constraint:constraint-layout:1.1.2'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
@@ -34,10 +39,9 @@ dependencies {
     implementation 'com.github.kittinunf.fuel:fuel:1.15.0' //for JVM
     implementation 'com.github.kittinunf.fuel:fuel-android:1.15.0' //for Android
     implementation 'com.github.kittinunf.fuel:fuel-gson:1.15.0'
-    implementation 'com.android.support:recyclerview-v7:28.0.0-rc01'
+    implementation 'com.android.support:recyclerview-v7:28.0.0-alpha1'
     implementation 'com.jakewharton:butterknife:8.8.1'
     annotationProcessor 'com.jakewharton:butterknife-compiler:8.8.1'
-    implementation 'com.android.support:design:28.0.0-rc01'
 
     def version = "1.1.1"
     implementation "android.arch.persistence.room:runtime:$version"
@@ -45,5 +49,10 @@ dependencies {
     implementation "android.arch.lifecycle:extensions:$version"
     annotationProcessor "android.arch.lifecycle:compiler:$version"
 
-    implementation 'com.android.support:support-v4:28.0.0-rc01'
+    /*implementation ('com.google.android.material:material:1.0.0-alpha1') {
+        exclude group: 'com.android.support'
+        exclude module: 'appcompat-v7'
+        exclude module: 'support-v4'
+    }*/
+
 }
