--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -24,13 +24,16 @@
         </activity>
         <activity
             android:name=".MovieDetailActivity"
-            android:parentActivityName=".MainActivity" />
+            android:parentActivityName=".MainActivity"
+            android:theme="@style/AppThemeNoActionBar" />
         <activity
             android:name=".FavouriteActivity"
             android:label="@string/title_activity_favourite"
             android:parentActivityName=".MainActivity" />
+
         <activity android:name=".FavouriteMovieDetailActivity"
-            android:parentActivityName=".FavouriteActivity"></activity>
+            android:parentActivityName=".FavouriteActivity"
+            android:theme="@style/AppThemeNoActionBar"/>
     </application>
 
 </manifest>
